# dpm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
dpm/: CMakeLists.txt  TODO.md  abi.hpp  assert.hpp  debug.hpp  flags.hpp  math.hpp  simd.hpp  traits.hpp  type.hpp  utility.hpp
dpm/detail/: CMakeLists.txt  alias.hpp  api.hpp  arch.hpp  assert.cpp  assert.hpp  config.hpp  const_f32.hpp  const_f64.hpp  define.hpp  dispatch.hpp  fconst.cpp  fconst.hpp  mask_element.hpp  reference.hpp  utility.hpp  where_expr.hpp
dpm/detail/arm/: CMakeLists.txt  abi.hpp  cpuid.hpp  math.hpp
dpm/detail/generic/: CMakeLists.txt  abi.hpp  cot.cpp  math.hpp  tancot.cpp  type.hpp
dpm/detail/ieee754/: CMakeLists.txt  const_f64.hpp  const_sincos.hpp
dpm/detail/x86/: CMakeLists.txt  abi.hpp  addsub.hpp  asincos.cpp  atan.cpp  bitwise.hpp  class.hpp  cmp.hpp  cpuid.cpp  cpuid.hpp  cvt.hpp  errfn.hpp  except.hpp  exp.cpp  exp.hpp  fmadd.hpp  fmanip.cpp  fmanip.hpp  frexp.cpp  fwd.hpp  hypbl.hpp  hypot.cpp  log.cpp  log10.cpp  log1p.cpp  log2.cpp  log_f32.cpp  log_f64.cpp  logb.cpp  lut.hpp  math.hpp  math_fwd.hpp  mbase.cpp  mbase.hpp  minmax.hpp  modf.cpp  muldiv.hpp  nextafter.cpp  polevl.hpp  pow.cpp  (+16 more)
dpm/detail/x86/avx512/: CMakeLists.txt  type_int16.hpp
dpm/detail/x86/m128/: CMakeLists.txt  bitwise.hpp  class.hpp  cmp.hpp  cvt.hpp  isnan.hpp  mask.hpp  math.hpp  sign.hpp  sign_ops.hpp  type.hpp  utility.hpp
dpm/detail/x86/m128/f32/: CMakeLists.txt  class.hpp  fmadd.hpp  sign.hpp  sincos.cpp  sincos.hpp  type.hpp  utility.hpp
dpm/detail/x86/m128/f64/: CMakeLists.txt  class.hpp  fmadd.hpp  polevl.hpp  sign.hpp  sincos.cpp  sincos.hpp  type.hpp  utility.cpp  utility.hpp
dpm/detail/x86/m128/i16/: CMakeLists.txt  type.hpp
dpm/detail/x86/m128/i32/: type.hpp
dpm/detail/x86/m128/i64/: type.hpp
dpm/detail/x86/m128/i8/: type.hpp
dpm/detail/x86/m256/: CMakeLists.txt  type.hpp  utility.hpp
dpm/detail/x86/m512/: CMakeLists.txt
dpm/detail/x86/sse/: type_float32.hpp  type_float64.hpp  type_int16.hpp  type_int32.hpp  type_int64.hpp
svm/: CMakeLists.txt  abi.hpp  flags.hpp  math.hpp  simd.hpp  traits.hpp
svm/detail/: CMakeLists.txt  arch.hpp  assert.hpp  define.hpp  dispatch.hpp  reference.hpp  utility.hpp  where_expr.hpp
svm/detail/arm/: CMakeLists.txt  abi.hpp  cpuid.hpp  type.hpp
svm/detail/generic/: CMakeLists.txt  abi.hpp  simd.hpp  type.hpp
svm/detail/x86/: CMakeLists.txt  abi.hpp  common.hpp  cpuid.cpp  cpuid.hpp  fwd.hpp  type.hpp  type_avx.hpp  type_avx512.hpp  type_common.hpp  type_sse.hpp  where_expr.hpp
svm/detail/x86/avx/: type.hpp  type_int16.hpp  type_int32.hpp
svm/detail/x86/avx512/: CMakeLists.txt  type.hpp
svm/detail/x86/sse/: CMakeLists.txt  type.hpp  type_float32.hpp  type_float64.hpp  type_int64.hpp
test/: CMakeLists.txt  common.hpp  main.cpp  reduce.cpp  test.cpp  test_blend.cpp  test_expon.cpp  test_fmanip.cpp  test_frexp.cpp  test_hypot.cpp  test_ilogb.cpp  test_power.cpp  test_shuffle.cpp  test_trig.cpp
